--- a/.github/mergeable.yml
+++ b/.github/mergeable.yml
@@ -18,7 +18,7 @@ mergeable:
         no_empty:
           enabled: true
         must_include:
-          regex: 'v6|v7|v8'
+          regex: 'v6*|v7*|v8*'
         #begins_with:
         #  match: 'v6|v7|v8|v9|v10'
 
