--- a/.github/mergeable.yml
+++ b/.github/mergeable.yml
@@ -17,10 +17,10 @@ mergeable:
       - do: project
         no_empty:
           enabled: true
-        must_include:
-          regex: 'v6*|v7*|v8*'
-        #begins_with:
-        #  match: 'v6|v7|v8|v9|v10'
+        #must_include:
+        #  regex: 'v6|v7|v8'
+        begins_with:
+          match: 'v6'
 
       - do: milestone
         no_empty:
