--- a/.github/mergeable.yml
+++ b/.github/mergeable.yml
@@ -18,11 +18,7 @@ mergeable:
         no_empty:
           enabled: true
         must_include:
-          regex: 'feat|imp|fix'
-        #begins_with:
-        #  match: 'v6|v7|v8'
-        #begins_with:
-        #  match: ['feat','imp', 'fix']
+          regex: 'feat|imp|fix|doc|chore'
 
       - do: milestone
         no_empty:
