--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -32,4 +32,4 @@ template: |
 
   ***
 
-  For full changes, see the [comparison between $PREVIOUS_TAG and $NEXT_MINOR_VERSION](../../compare/$PREVIOUS_TAG...v$NEXT_MINOR_VERSION)
+  For full changes, see the [comparison between $PREVIOUS_TAG and v$NEXT_MINOR_VERSION](../../compare/$PREVIOUS_TAG...v$NEXT_MINOR_VERSION)
